syntax = "proto3";
package api.product;
option csharp_namespace = "Learn.Blazor.Net7.Pag.Grpc.Product";

import "protos/Product/ProductUnit.proto";

message ProductGetReq {
    int32 quantity = 1;
    optional int32 offset = 2;
}
message ProductGetRes {
    repeated ProductUnit units = 1;
    optional ProductGetQuantityRes quantity_res = 2;
}

message ProductGetQuantityReq {
    optional bool include_total = 1;
}
message ProductGetQuantityRes {
    int32 max_per_request = 1;
    optional int32 total_quantity = 2;
}

message ProductGetByIdReq {
  string id = 1;
}
message ProductGetByIdRes {
  optional ProductUnit unit = 1;
  optional string error_message = 2;
}